# cookiecutters

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_test.py  cookiecutter.json  justfile
.github/: labels.yaml
.github/workflows/: repo-config.yml  test.yml
python-library/: README.md  cookiecutter.json  default-labels.yaml
python-library/hooks/: post_gen_project.py
python-library/{{cookiecutter.project_slug}}/: .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
python-library/{{cookiecutter.project_slug}}/.github/: dependabot.yml  renovate.json5
python-library/{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
python-library/{{cookiecutter.project_slug}}/.github/workflows/: bump.yml  publish.yml  repo-config.yml  test.yml
python-library/{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
python-library/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py
python-library/{{cookiecutter.project_slug}}/tests/: init_test.py
