[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.first_version}}"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
#    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = [
    "bump-my-version>=1.2.1",
    "deptry>=0.23.0",
    "mypy>=1.17.0",
    "poethepoet>=0.36.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[project.urls]
source = "https://github.com/{{__gh_slug}}"
changelog = "https://github.com/{{__gh_slug}}/releases"
issues = "https://github.com/{{__gh_slug}}/issues"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
