[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.first_version}}"
description = "{{cookiecutter.description}}"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
#    "Development Status :: 1 - Planning",
#    "Development Status :: 2 - Pre-Alpha",
#    "Development Status :: 3 - Alpha",
#    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
#    "Development Status :: 6 - Mature",
#    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "tox",
    "tox-uv",
]
gha-update = [
    "gha-update ; python_full_version >= '3.12'",
]
tests = [
    "pytest",
    "pytest-cov",
]
typing = [
    "mypy",
]

[project.urls]
source = "https://github.com/{{__gh_slug}}"
changelog = "https://github.com/{{__gh_slug}}/releases"
issues = "https://github.com/{{__gh_slug}}/issues"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev", "tests", "typing"]

[tool.uv.build-backend]
module-name = "{{cookiecutter.module_name}}"
module-root = "src"

[tool.ruff]
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",     # Checks for a file-level copyright statement.
    "COM812",  # Checks for the absence of trailing commas. Not recommended with formatter.
    "COM819",  # Checks for prohibited trailing commas. Not recommended with formatter.
    "FIX002",  # Checks for to-do comments.
]
pydocstyle.convention = "google"
flake8-quotes.inline-quotes = "single"
flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = [
    "INP",     # Checks for packages missing an __init__.py file.
    "PLC2701", # Checks for private name imports.
    "PLR2004", # Checks for "magic" values.
    "S101",    # Checks for the use of assert statements.
]

[tool.mypy]
strict = true

[tool.tox]
env_list = [
    "py3.13", "py3.12", "py3.11", "py3.10", "py3.9",
    "style",
    "typing",
]

[tool.tox.env_run_base]
description = "run tests with pytest"
runner = "uv-venv-lock-runner"
package = "wheel"
wheel_build_env = ".pkg"
constrain_package_deps = true
use_frozen_constraints = true
dependency_groups = ["tests"]
commands = [["pytest", {replace = "posargs", default = [], extend = true}]]

[tool.tox.env.style]
description = "run all pre-commit hooks on all files"
dependency_groups = ["dev"]
skip_install = true
commands = [["pre-commit", "run", "--all-files"]]

[tool.tox.env.typing]
description = "run static type checkers"
dependency_groups = ["typing"]
commands = [["mypy", {replace = "posargs", default = ["."], extend = true}]]

[tool.tox.env.update-actions]
description = "update GitHub Actions pins"
labels = ["update"]
dependency_groups = ["gha-update"]
skip_install = true
commands = [["gha-update"]]

[tool.tox.env.update-pre_commit]
description = "update pre-commit pins"
labels = ["update"]
dependency_groups = ["dev"]
skip_install = true
commands = [["pre-commit", "autoupdate", "--freeze", "-j4"]]

[tool.tox.env.update-requirements]
description = "update uv lock"
labels = ["update"]
dependency_groups = []
no_default_groups = true
skip_install = true
commands = [["uv", "lock", {replace = "posargs", default = ["-U"], extend = true}]]
